--- a/DOM/index.html
+++ b/DOM/index.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+	<label>RUB<input type="number" id="rub"></label>
+		
+	<label>USD<input type="text" id="usd"></label>
+
 	<div class="box" id="box"></div>
 	<button>1</button>
 	<button>2</button>
